fixes header style error

--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 <body>
     <dev class="header">
         <p class="logo">Cats Meow</p>
-        <dev class="links">
-            <ul>
-                <li>Link One</li>
-                <li>Link Two</li>
-                <li>Link Three</li>
+            <ul class="links">
+                <li><a href="#">Link One</a></li>
+                <li><a href="#">Link Two</a></li>
+                <li><a href="#">Link Three</a></li>
             </ul>
-        </dev>
     </dev>
 </body>
 </html>
