--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
                 <li><a href="#">Link Three</a></li>
             </ul>
     </dev>
+    <dev class="section-1">
+        <dev class="section-1-left">
+            <h1>Meow Meow Meooow</h1>
+            <p>Meow meow meow meow meow meow. Hiisssss! Meow meoooow. Meowowow meow meow. MEOW?</p>
+            <button>MEOW</button>
+        </dev>
+        <img class="img-1" src="https://images.unsplash.com/photo-1495360010541-f48722b34f7d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=436&q=80">
+    </dev>
 </body>
 </html>
