--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </dev>
     <dev class="section-1">
         <dev class="section-1-left">
-            <h1>Meow Meow Meooow</h1>
-            <p>Meow meow meow meow meow meow. Hiisssss! Meow meoooow. Meowowow meow meow. MEOW?</p>
-            <button>MEOW</button>
+            <h1 class="s-1-header">Meow Meow Meooow!</h1>
+            <p class="s-1-caption">Meow meow meow meow meow meow. Hiisssss! Meow meoooow. Chirp. Meowowow meow meow. Argh. Meow meow meoooooow. Hiss. mew. MEOW?</p>
+            <button id="buttom-top">MEOW</button>
         </dev>
         <img class="img-1" src="https://images.unsplash.com/photo-1495360010541-f48722b34f7d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=436&q=80">
     </dev>
