--- a/index.html
+++ b/index.html
@@ -45,5 +45,9 @@
             </dev>
         </dev>
     </dev>
+    <dev class="quote">
+        <h3 class="meat">“One cat just leads to another.”</h3>
+        <p class="att"> - Ernest Hemingway</p>
+    </dev>
 </body>
 </html>
