--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             </dev>
         </dev>
     </dev>
-    <dev class="quote">
+    <section>
         <h3 class="meat">“One cat just leads to another.”</h3>
         <p class="att"> - Ernest Hemingway</p>
-    </dev>
+    </section>
 </body>
 </html>
