--- a/index.html
+++ b/index.html
@@ -49,5 +49,14 @@
         <h3 class="meat">“One cat just leads to another.”</h3>
         <p class="att"> - Ernest Hemingway</p>
     </section>
+    <dev class="section-3">
+        <dev class="s-3-blue">
+            <dev class="s-3-text">
+                <h4>Meow, Meow Meow! Meow!</h4>
+                <p class="s-3-sub">Meow. Hissss. Merw meow meow. purrrr. Meow, meow meow meow. Purrrrrrrr. Hiss!</p>
+                <button>Meow</button>
+            </dev>
+        </dev>
+    </dev>
 </body>
 </html>
