--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,40 +8,52 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <dev class="header">
         <p class="logo">Cats Meow</p>
-            <ul class="links">
-                <li><a href="#">Link One</a></li>
-                <li><a href="#">Link Two</a></li>
-                <li><a href="#">Link Three</a></li>
-            </ul>
+        <ul class="links">
+            <li><a href="#">Link One</a></li>
+            <li><a href="#">Link Two</a></li>
+            <li><a href="#">Link Three</a></li>
+        </ul>
     </dev>
     <dev class="section-1">
         <dev class="section-1-left">
             <h1 class="s-1-header">Meow Meow Meooow!</h1>
-            <p class="s-1-caption">Meow meow meow meow meow meow. Hiisssss! Meow meoooow. Chirp. Meowowow meow meow. Argh. Meow meow meoooooow. Hiss. mew. MEOW?</p>
+            <p class="s-1-caption">Meow meow meow meow meow meow. Hiisssss! Meow meoooow. Chirp. Meowowow meow meow.
+                Argh. Meow meow meoooooow. Hiss. mew. MEOW?</p>
             <button class="button-top">MEOW</button>
         </dev>
-        <img class="img-1" src="https://images.unsplash.com/photo-1495360010541-f48722b34f7d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=436&q=80" alt="a long hair tabby cat sits on beige stairs">
+        <img class="img-1"
+            src="https://images.unsplash.com/photo-1495360010541-f48722b34f7d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=436&q=80"
+            alt="a long hair tabby cat sits on beige stairs">
     </dev>
     <dev class="section-2">
         <h2>Meow Meow? Meow!</h2>
         <dev class="s-2-a">
             <dev class="s-2-b">
-                <img class="s-2-img" src="https://images.unsplash.com/photo-1543852786-1cf6624b9987?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="A tabby cat hissing wearing a yellow bandana" >
+                <img class="s-2-img"
+                    src="https://images.unsplash.com/photo-1543852786-1cf6624b9987?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+                    alt="A tabby cat hissing wearing a yellow bandana">
                 <p class="s-2-cap">Hiss</p>
             </dev>
             <dev class="s-2-b">
-                <img class="s-2-img" src="https://images.unsplash.com/photo-1574158622682-e40e69881006?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80" alt="The face of a short hair tabby cat with green eyes on a sky blue background">
+                <img class="s-2-img"
+                    src="https://images.unsplash.com/photo-1574158622682-e40e69881006?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                    alt="The face of a short hair tabby cat with green eyes on a sky blue background">
                 <p class="s-2-cap">Meow</p>
             </dev>
             <dev class="s-2-b">
-                <img class="s-2-img" src="https://images.unsplash.com/photo-1573865526739-10659fec78a5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=415&q=80" alt="A long hair orange cat laying down looking up quizzically">
+                <img class="s-2-img"
+                    src="https://images.unsplash.com/photo-1573865526739-10659fec78a5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=415&q=80"
+                    alt="A long hair orange cat laying down looking up quizzically">
                 <p class="s-2-cap">Augh</p>
             </dev>
             <dev class="s-2-b">
-                <img class="s-2-img" src="https://images.unsplash.com/photo-1587232049448-0d8f08bfbc89?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80" alt="A white cat sleeping on its back on a white comforter with black hearts">
+                <img class="s-2-img"
+                    src="https://images.unsplash.com/photo-1587232049448-0d8f08bfbc89?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
+                    alt="A white cat sleeping on its back on a white comforter with black hearts">
                 <p class="s-2-cap">purrrr</p>
             </dev>
         </dev>
@@ -50,13 +63,14 @@
         <p class="att"> - Ernest Hemingway</p>
     </section>
     <dev class="section-3">
-        <dev class="s-3-blue">
+        <dev id="blue">
             <dev class="s-3-text">
                 <h4>Meow, Meow Meow! Meow!</h4>
                 <p class="s-3-sub">Meow. Hissss. Merw meow meow. purrrr. Meow, meow meow meow. Purrrrrrrr. Hiss!</p>
-                <button>Meow</button>
             </dev>
+            <button class="b-butt">Meow</button>
         </dev>
     </dev>
 </body>
+
 </html>
