--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             <button class="b-butt">Meow</button>
         </dev>
     </dev>
+    <footer>
+        <p>Copyright Cat's Meow 2022</p>
+    </footer>
 </body>
 
 </html>
